--- a/projeto-concreta/WebSites/src/app/pages/login/login.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/login/login.component.html
@@ -17,7 +17,7 @@
         required
     >
     <button class="login-button" (click)="onLogin()">ENTRAR</button>
-    <a href="#" class="forgot-password">Esqueceu a senha?</a>
+    <a href="/esqueceu-senha" class="forgot-password">Esqueceu a senha?</a>
 </div>
 
 <app-footer></app-footer>
