--- a/projeto-concreta/WebSites/src/app/pages/login/login.component.scss
+++ b/projeto-concreta/WebSites/src/app/pages/login/login.component.scss
@@ -7,21 +7,16 @@ body, html {
     height: 100%;
 }
 
-.h-screen {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
 .login-box {
+    margin-top: 400px;
+    margin-bottom: 400px;
     background-color: #023059;
     width: 460px;
     height: 370px;
     padding: 2rem;
     border-radius: 12px;
     color: white;
-    margin: 3rem auto;
+    margin: 14rem auto;
 }
 
 footer {
