ajuste - excluir obra

--- a/projeto-concreta/WebSites/src/app/pages/obra-especifica-gestor/obra-especifica-gestor.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/obra-especifica-gestor/obra-especifica-gestor.component.html
@@ -55,7 +55,7 @@
     </div>
     <div class="compartilhar-right">
         <button class="btn obra-concluida" (click)="marcarComoConcluida()">OBRA CONCLUÍDA</button>
-        <button class="btn excluir-obra">EXCLUIR OBRA</button>
+        <button class="btn excluir-obra" (click)="excluirObra()">EXCLUIR OBRA</button>
     </div>
 </div>
 </div>
