--- a/projeto-concreta/WebSites/src/app/pages/obra-finalizada/obra-finalizada.component.scss
+++ b/projeto-concreta/WebSites/src/app/pages/obra-finalizada/obra-finalizada.component.scss
@@ -6,7 +6,7 @@
     font-family: 'Oswald', sans-serif;
   }
   
-  body {
+  .body {
     display: flex;
     justify-content: center;
     align-items: center;
