Inclusão de Mais Etapas na Tela Cadastro de Obra.

--- a/projeto-concreta/WebSites/src/app/pages/cadastrar-nova-obra/cadastrar-nova-obra.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/cadastrar-nova-obra/cadastrar-nova-obra.component.html
@@ -1,34 +1,32 @@
 <app-navbar></app-navbar>
-<div [formGroup]="formGroup">
-<!-- Título Principal -->
-<header class="titulo-principal">
-  <h1>Siga o passo a passo para efetuar o <span class="negrito">cadastro</span> da sua <span class="negrito">obra com sucesso!</span></h1>
-</header>
+<form [formGroup]="formGroup" (ngSubmit)="save()">
+  <!-- Título Principal -->
+  <header class="titulo-principal">
+    <h1>Siga o passo a passo para efetuar o <span class="negrito">cadastro</span> da sua <span class="negrito">obra com sucesso!</span></h1>
+  </header>
 
-<!-- Passo 1 -->
-<section class="passo passo-1">
-  <h2>1º Passo</h2>
-  <hr>
-  <div class="form-container">
-    <h3>Sobre a obra:</h3>
-    <form [formGroup]="formGroup">
-      <div class="campo">
-        <label for="nome-obra">Nome da obra</label>
-        <input type="text" id="nome-obra" placeholder="Nome da obra" required formControlName="nomeObra">
-      </div>
-      <div class="campo">
-        <label for="construtora">Construtora</label>
-        <input type="text" id="construtora" placeholder="Construtora" required formControlName="construtora">
-      </div>
-      <div class="campo">
-        <label for="localizacao">Localização (Cidade - Estado)</label>
-        <input type="text" id="localizacao" placeholder="Localização (Cidade - Estado)" required formControlName="localizacao">
-      </div>
-      <div class="campo prazo-conclusao">
-        <label for="prazo-conclusao">Prazo de conclusão</label>
-        <input type="date" id="prazo-etapa" formControlName="prazoConclusao">
-      </div>
-    </form>
+  <!-- Passo 1 -->
+  <section class="passo passo-1">
+    <h2>1º Passo</h2>
+    <hr>
+    <div class="form-container">
+      <h3>Sobre a obra:</h3>
+        <div class="campo">
+          <label for="nome-obra">Nome da obra</label>
+          <input type="text" id="nome-obra" placeholder="Nome da obra" required formControlName="nomeObra">
+        </div>
+        <div class="campo">
+          <label for="construtora">Construtora</label>
+          <input type="text" id="construtora" placeholder="Construtora" required formControlName="construtora">
+        </div>
+        <div class="campo">
+          <label for="localizacao">Localização (Cidade - Estado)</label>
+          <input type="text" id="localizacao" placeholder="Localização (Cidade - Estado)" required formControlName="localizacao">
+        </div>
+        <div class="campo prazo-conclusao">
+          <label for="prazo-conclusao">Prazo de conclusão</label>
+          <input type="date" id="prazo-etapa" formControlName="prazoConclusao">
+        </div>
   </div>
 </section>
 
@@ -38,23 +36,23 @@
   <hr>
   <div class="form-container">
     <h3>Etapas da obra:</h3>
-    <h4>Etapa 1</h4>
-    <form [formGroup]="etapasForm">
+    <div *ngFor="let etapa of etapasControls; let i = index" [formGroupName]="i" class="etapa-card">
+      <h4>Etapa {{ i + 1 }}</h4>
       <div class="campo">
-        <label for="nome-etapa">Nome da etapa</label>
-        <input type="text" id="nome-etapa" placeholder="Nome da etapa" required formControlName="nomeEtapa">
+        <label for="nome-etapa-{{ i }}">Nome da etapa</label>
+        <input type="text" id="nome-etapa-{{ i }}" placeholder="Nome da etapa" required formControlName="nomeEtapa">
       </div>
       <div class="campo">
-        <label for="descricao-etapa">Descrição da etapa</label>
-        <textarea id="descricao-etapa" placeholder="Escreva sua mensagem aqui..." required formControlName="descricaoEtapa"></textarea>
+        <label for="descricao-etapa-{{ i }}">Descrição da etapa</label>
+        <textarea id="descricao-etapa-{{ i }}" placeholder="Escreva sua mensagem aqui..." required formControlName="descricaoEtapa"></textarea>
       </div>
       <div class="campo prazo-conclusao">
-        <label for="prazo-conclusao">Prazo de conclusão</label>
-        <input type="date" id="prazo-etapa" formControlName="prazoConclusaoEtapa">
+        <label for="prazo-etapa-{{ i }}">Prazo de conclusão</label>
+        <input type="date" id="prazo-etapa-{{ i }}" formControlName="prazoConclusaoEtapa">
       </div>
-    </form>
+    </div>
     <div class="nova-etapa">
-      <a href="#" class="nova-etapa-link">+ Nova Etapa</a>
+      <button type="button" class="nova-etapa-link" (click)="addNovaEtapa($event)">+ Nova Etapa</button>
     </div>
   </div>
   <!-- Botões Cancelar e Cadastrar -->
@@ -62,6 +60,7 @@
     <button class="btn-cadastrar" (click)="save()">CADASTRAR</button>
     <button class="btn-cancelar">CANCELAR</button>
   </div>
+
 </section>
-</div>
+</form>
 <app-footer></app-footer>
