--- a/projeto-concreta/WebSites/src/app/pages/cadastrar-nova-obra/cadastrar-nova-obra.component.scss
+++ b/projeto-concreta/WebSites/src/app/pages/cadastrar-nova-obra/cadastrar-nova-obra.component.scss
@@ -150,6 +150,7 @@ textarea::placeholder {
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
+  margin-bottom: 50px;
 }
 
 /* Estilo do botão CANCELAR */
